fix: use container spacing for resource page (#79)
* fix: use container spacing for resource page

* temp: fix row/col setup

* remove col div

--- a/apps/site/src/views/Resources/sections/ApiResources/ApiResources.module.scss
+++ b/apps/site/src/views/Resources/sections/ApiResources/ApiResources.module.scss
@@ -1,6 +1,6 @@
 @use "bootstrap-utils" as utils;
 
-.row {
+.bottom-spacer {
 	margin-bottom: 50px;
 }
 
@@ -17,7 +17,6 @@
 	background-position: center;
 	background-size: 100% 100%;
 	height: 343px;
-	width: 80vw;
 	position: relative;
 	display: flex;
 	justify-content: center;
