--- a/apps/site/src/views/Resources/sections/BackendResources/BackendResources.module.scss
+++ b/apps/site/src/views/Resources/sections/BackendResources/BackendResources.module.scss
@@ -1,6 +1,6 @@
 @use "bootstrap-utils" as utils;
 
-.row {
+.bottom-spacer {
 	margin-bottom: 50px;
 }
 
@@ -18,7 +18,6 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 100% 100%;
-	width: 80vw;
 	height: 230px;
 	position: relative;
 	display: flex;
